<?xml version="1.0"?>
<package>
  <name>roah_rsbb</name>
  <version>0.0.0</version>
  <description>RoCKIn@Home Referee, Scoring and Benchmarking Box</description>

  <maintainer email="jreis@isr.ist.utl.pt">João Reis</maintainer>
  <author email="jreis@isr.ist.utl.pt">João Reis</author>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>roah_devices</build_depend>
  <build_depend>rockin_benchmarking</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>roah_devices</run_depend>
  <run_depend>rockin_benchmarking</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
